# pydantic-ai-starter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml
pydantic_ai_starter/: __main__.py
tests/: test_example.py
